Corrected the nav right spacing

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -18,6 +18,7 @@
 
 .nav {
   display: flex;
+  padding-right: 40px;
 }
 
 .navlist {
